--- a/Resources/cs.lproj/Localizable.strings
+++ b/Resources/cs.lproj/Localizable.strings
@@ -2,12 +2,12 @@
 "restore_wallet_info" = "Pokoušíte se obnovit již existující Beam peněženku. Vezměte prosím na vědomí, že pokud používáte peněženku na jiném zařízení, Váš zůstatek bude aktuální, ale historie transakcí a adresy budou uchovávány na každém zařízení zvlášť.";
 "no_space_title" = "Nedostatek místa";
 "no_space_info" = "Pro obnovení peněženky je potřeba nejméně 200 MB volného místa v zařízení";
-"beam_title" = "Škálovatelná anonymní kryptoměna";
+"beam_title" = "Anonymní škálovatelná kryptoměna";
 "create_new_wallet" = "Vytvořit novou peněženku";
 "enter_password_title" = "Zadejte své heslo pro přístup k peněžence";
 "empty_password" = "Heslo nesmí být prázdné";
 "incorrect_password" = "Nesprávné heslo";
-"incompatible_node_title" = "Nekompatibilní síťový uzel";
+"incompatible_node_title" = "Nekompatibilní síťový přístupový bod Node";
 "incompatible_node_info" = "Pokoušíte se připojit k nekompatibilnímu síťovému uzlu.";
 "change_settings" = "Změna nastavení";
 "cancel" = "Zrušit";
@@ -56,10 +56,10 @@
 "receive" = "Přijmout";
 "send" = "Odeslat";
 "available" = "K dispozici";
-"in_progress" = "Probíhá";
+"in_progress" = "Probíhající";
 "receiving" = "Přijímání";
 "sending" = "Odesílání";
-"maturing" = "Vyzrávaní";
+"maturing" = "Dokončování";
 "sending_address" = "Odesílací adresa";
 "receiving_address" = "Přijímací adresa";
 "transaction_fee" = "Transakční poplatek";
@@ -119,6 +119,8 @@
 "delete_address" = "Odstranit adresu";
 "delete_address_transaction" = "Odstranit adresu a související transakce";
 "delete_address_only" = "Odstranit pouze adresu";
+"delete_address_text" = "Opravdu chcete odstranit tuto adresu z Vaší peněženky?";
+"delete_contact_text" = "Jste si jisti, že chcete odstranit z Vaší peněženky tento kontakt?";
 "category" = "Označení";
 "in_24_hours" = "Za 24 hodin";
 "never" = "Nikdy";
@@ -231,7 +233,7 @@
 "outgoing" = "Odchozí adresa (automaticky vytvořena)";
 "outgoing_address" = "Odchozí adresa";
 "your_password" = "Vaše heslo";
-"node" = "Uzel";
+"node" = "přístupový bod Node";
 "categories" = "Štítky";
 "ip_port" = "IP:port";
 "ask_password" = "Požádat o heslo při každém odeslání";
@@ -312,7 +314,7 @@
 "id" = "ID";
 "date_time" = "Datum | čas";
 "utxo_history" = "UTXO historie";
-"delete_all_text" = "Jste si jisti, že chcete odstranit vše (str) z Vaší peněženky?";
+"delete_all_text" = "Are you sure you want to delete all (str) from your device?";
 "delete_category_text" = "Jste si jisti, že chcete odstranit štítek „(str)“?";
 "canot_connect_node" = "Nelze se připojit k uzlu";
 "buy_beam_value" = "Odeslat (hodnota) na výše uvedenou adresu pro dokončení transakce"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
@@ -386,11 +388,11 @@
 "automatic_restore_title" = "Doporučena obnova";
 "automatic_restore_text" = "Beam Wallet stáhne snímek blockchainu a obnoví vaše prostředky v zařízení";
 "manual_restore_title" = "Obnovit pomocí důvěryhodného uzlu";
-"manual_restore_text" = "Peněženka Beam se připojí ke specifickému uzlu důvěryhodného (nakonfigurovanému vaším privátním klíčem) a uzel obnoví vaše prostředky";
+"manual_restore_text" = "Peněženka Beam se připojí ke specifickému důvěryhodnému přístupovému bodu Node (nakonfigurovanému vaším privátním klíčem) a přístupový bod obnoví vaše prostředky";
 "paste_owner_key" = "Pro obnovení z uzlu vložte tento kód do peněženky Beam ve Vašem stolním počítači..";
-"after_paste_owner_key" = "Jakmile vložíte kód, spusťte Váš uzel na počítači a klikněte na Další v mobilní aplikaci.";
+"after_paste_owner_key" = "Jakmile vložíte kód, spusťte Váš přístupový bod Node na počítači a klikněte na Další v mobilní aplikaci.";
 "enter_trusted_node" = "Zadejte adresu důvěryhodného uzlu";
-"trusted_node_error" = "Uzel není připojen. Zkuste připojit peněženku k jinému uzlu nebo použijte doporučené obnovení.";
+"trusted_node_error" = "Přístupový bod Node není připojen. Zkuste připojit peněženku k jinému přístupovému bodu nebo použijte doporučené obnovení.";
 "owner_key" = "Privátní klíč";
 "new_transaction" = "Příchozí transakce";
 "click_to_receive" = "Klikněte pro příjem";
@@ -410,7 +412,7 @@
 "downloading_blockchain" = "Stahování informací o blockchainu";
 "and" = "a"; // example: addresses and contacts
 "auto_restore_warning" = "Ujistěte se, že jste za poslední hodinu neprovedli žádné transakce (z jakéhokoliv zařízení). Pokud jste tak učinili, počkejte prosím alespoň jednu hodinu po poslední transakci, než budete pokračovat s obnovením. V opačném případě může být váš obnovený zůstatek nesprávný a bude vyžadován další postup pro obnovení.";
-"manual_restore_warning" = "Ověřte, zda je váš uzel plně synchronizován s blockchainem před zahájením procesu obnovy. V opačném případě může být váš obnovený zůstatek nesprávný a bude vyžadován další postup pro obnovení.";
+"manual_restore_warning" = "Ověřte, zda je váš přístupový bod Node plně synchronizován s blockchainem před zahájením procesu obnovy. V opačném případě může být váš obnovený zůstatek nesprávný a bude vyžadován další postup pro obnovení.";
 "understand" = "Rozumím";
 "NSPhotoLibraryAddUsageDescription" = "Uložit podrobnosti transakce a naskenovat QR kódy ze snímků";
 "NSPhotoLibraryUsageDescription" = "Poskytnout přístup k galerii pro výběr QR kódu";
@@ -422,7 +424,7 @@
 "restore_create_text" = "Pokud obnovíte peněženku, celá historie transakcí a adres bude ztracena.";
 "proceed" = "Provést";
 "info_restore_title" = "Nepoužívejte současně dvě peněženky vytvořené ze stejných klíčových slov.";
-"info_restore_text" = "Pokud spustíte dvě peněženky vytvořené ze stejných klíčových slov, jejich zůstatky nebudou synchronizovány. Abyste udrželi zůstatky synchronizované, použijte vlastní důvěryhodný uzel nakonfigurovaný vaším klíčem. Také vemte na vědomí, že transakční historii nelze  mezi peněženkami synchronizovat.";
+"info_restore_text" = "Pokud spustíte dvě peněženky vytvořené ze stejných klíčových slov, jejich zůstatky nebudou synchronizovány. Abyste udrželi zůstatky synchronizované, použijte vlastní důvěryhodný přístupový bod Node nakonfigurovaný vaším klíčem. Také vemte na vědomí, že transakční historii nelze mezi peněženkami synchronizovat.";
 "crash_title" = "Peněženka Beam přestala neočekávaně fungovat";
 "crash_message" = "Souhlasíte s tím, že nám nahlašujete své omezené množství informací? Sběr informací o selhání nám umožní mnohem rychleji objevit a opravit chyby. Toto je pouze jediná zpráva týkající se selhání, později už nebudeme shromažďovat žádná další data.";
 "crash_negative" = "Ne, děkuji";
@@ -490,5 +492,11 @@
 "incorrect_file_text" = "Soubor, který se pokoušíte importovat do peněženky Beam je v nevhodném formátu. Prosím vyberte jiný soubor a zkuste to znovu.";
 "import_data_title" = "Importovat data";
 "import_data_text" = "Jste si jisti, že chcete importovat data do Vaší peněženky Beam? Všechna aktuální data budou nahrazena importovanými daty.";
+"import_data_text_2" = "Importovat lze pouze data exportovaná z peněženky vytvořené pomocí stejných klíčových slov.";
 "import" = "Importovat";
 "export_data" = "Exportovat data";
+"till_block" = "do výšky bloku";
+"since" = "since"; // example since 1024 block height
+"block_height" = "block height";
+"dark_mode" = "Dark mode";
+"delete_all_tags" = "Delete all tags";
