--- a/Resources/es.lproj/Localizable.strings
+++ b/Resources/es.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "Restaura wallet";
-"restore_wallet_info" = "Está intentando restaurar un monedero de Beam existente. Tenga en cuenta que si usa su monedero en otro dispositivo, su saldo estará actualizado, pero el historial de transacciones y las direcciones se guardarán por separado en cada dispositivo.";
+"restore_wallet_info" = "Está intentando restaurar un wallet de Beam existente. Tenga en cuenta que si usa su wallet en otro dispositivo, su saldo estará actualizado, pero el historial de transacciones y las direcciones se guardarán por separado en cada dispositivo.";
 "no_space_title" = "No hay suficiente capacidad de almacenamiento";
 "no_space_info" = "Se requieren al menos 200 Mb de espacio libre en el dispositivo para restaurar el wallet";
 "beam_title" = "Criptomoneda confidencial escalable";
@@ -16,7 +16,7 @@
 "seed_prhase" = "Frase semilla";
 "input_seed" = "Escribe en tu frase semilla";
 "confirm_seed_text" = "Para asegurarse de que la frase semilla esté escrita correctamente, complete las palabras específicas a continuación";
-"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed" = "Tu frase de semilla es la clave de acceso a todos los fondos de tu wallet. A partir de ahora no podrás ver tu frase de semilla en ajustes. Imprime o escribe la frase para mantenerla en un lugar seguro o en una bóveda bloqueada. Sin la frase usted no podrá recuperar su dinero.";
 "display_seed_old" = "Su frase semilla es la clave de acceso a todas las criptomonedas en su wallet. Imprime o escribe la frase para guardarla en un lugar seguro o caja de seguridad. Sin la frase no podrás recuperar tu dinero.";
 "intro_seed_main" = "Crea un nuevo wallet generando una frase semilla. Si alguna vez pierdes tu dispositivo, necesitará esta frase para recuperar su wallet! Nunca escriba su frase semilla en keychains o administradores de contraseñas. Nunca lo guarde en sus carpetas locales o remotas de ninguna forma.";
 "intro_seed_1" = "No dejes que nadie vea tu frase semilla";
@@ -51,8 +51,8 @@
 "no_internet" = "No hay conexión a internet";
 "wallet_not_created" = "El wallet no ha sido creado";
 "wallet_not_opened" = "El wallet no se puede abrir";
-"restor_wallet_warning" = "Por favor, espere a la sincronización y no cierre o minimice la aplicación. La restauración de la cartera puede tardar un tiempo.";
-"restor_wallet_info" = "Solo se puede restaurar el saldo del wallet (UTXO), la información de la transacción siempre es privada y nunca se mantiene en la cadena de bloques.";
+"restor_wallet_warning" = "Restaurar su wallet puede tardar un tiempo. Por favor, espere a que la sincronización finalice - no cierre ni minimice la aplicación.";
+"restor_wallet_info" = "Sólo el saldo de la wallet (UTXOs) será restaurado. La información de tu transacción es siempre privada y nunca guardada en la cadena de bloques.";
 "receive" = "Recibe";
 "send" = "Enviar";
 "available" = "Disponible";
@@ -119,6 +119,8 @@
 "delete_address" = "Borrar dirección";
 "delete_address_transaction" = "Eliminar dirección y transacciones relacionadas";
 "delete_address_only" = "Borrar sólo la dirección";
+"delete_address_text" = "¿Está seguro de que desea eliminar esta dirección de su wallet?";
+"delete_contact_text" = "¿Está seguro que desea eliminar este contacto de su wallet?";
 "category" = "Etiqueta";
 "in_24_hours" = "En 24 horas";
 "never" = "Nunca";
@@ -312,7 +314,7 @@
 "id" = "ID";
 "date_time" = "Fecha | hora";
 "utxo_history" = "Historial de UTXO";
-"delete_all_text" = "¿Está seguro de que desea eliminar todo (str) de su wallet?";
+"delete_all_text" = "Are you sure you want to delete all (str) from your device?";
 "delete_category_text" = "¿Está usted seguro de querer borrar “(str)” etiqueta?";
 "canot_connect_node" = "No se puede conectar al nodo";
 "buy_beam_value" = "Enviar (value) a la dirección (name) anterior para completar la transacción"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
@@ -359,7 +361,7 @@
 "default" = "Defecto";
 "my_active" = "Mi activo"; // addresses
 "my_expired" = "Mi caducado"; // addresses
-"general_settings" = "Configuración general";
+"general_settings" = "General";
 "unavailable" = "Indisponible";
 "in_progress_out" = "En progreso (saliente)";
 "in_progress_in" = "En progreso (entrante)";
@@ -369,7 +371,6 @@
 "h" = "h"; // hour
 "m" = "m"; // minute
 "send_qr_secure" = "Mostrar este código QR al remitente o enviar a través de un canal externo seguro.";
-"share_transaction" = "Compartir detalles de la transacción";
 "auth_face_confirm" = "Confirma tu rostro para autenticar";
 "auth_touch_confirm" = "Confirma tu huella dactilar para autenticar";
 "auth_bio_failed" = "(Mecanismo) ha sido bloqueado debido a algunos intentos fallidos. Introduzca el código de acceso del iPhone para habilitar (Mecanismo)."; // (Mechanism) is Face ID or Touch ID.
@@ -423,7 +424,7 @@
 "restore_create_text" = "Si restaura un wallet, se perderán todos los registros de transacciones y direcciones.";
 "proceed" = "Proceder";
 "info_restore_title" = "No ejecutar simultáneamente dos wallets iniciados desde la misma frase de semilla";
-"info_restore_text" = "El historial de saldos y transacciones no se sincronizará a través del dispositivo y las transacciones podrían fallar.";
+"info_restore_text" = "Si ejecuta dos carteras con la misma semilla, sus saldos no se sincronizarán. Para mantener los balances sincronizados, utilice su propio nodo de confianza configurado con su clave de propietario. También tenga en cuenta que el historial de transacciones no se sincronizará entre wallets en cualquier caso.";
 "crash_title" = "La wallet de Beam falló inesperadamente";
 "crash_message" = "¿Aceptaría enviarnos su cantidad limitada de información? Recopilar información sobre fallos nos permitiría descubrir y corregir errores mucho más rápido. Este es solo un informe único relacionado con el error, no seguiremos recopilando sus datos más adelante.";
 "crash_negative" = "No, gracias";
@@ -446,38 +447,56 @@
 "use_face_id" = "Usa tu Face ID";
 "enter_your_password" = "Introduce tu contraseña";
 "share_details" = "Compartir detalles";
-"faucet_title" = "Start using the wallet";
-"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
-"faucet_ok" = "Yes, please";
-"faucet_no" = "No, I'm fine";
-"show_seed_phrase" = "Show seed phrase";
-"increase_security" = "Increase security";
-"increase_security_text" = "If you ever lose your device, you will need this phrase to recover your wallet!\nNever type your seed phrase in keychains or password managers.\nNever save it in your local or remote folders in any form.";
-"all_set" = "You are all set";
-"wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
-"make_wallet_secure_title" = "Make your wallet secure";
-"make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
-"complete_verification" = "Complete verification";
-"yes_please" = "yes, please";
-"i_will_later" = "I will do it later";
-"create_password" = "Create password";
-"get_coins" = "Get coins";
-"secure_your_phrase" = "Secure your phrase";
-"privacy" = "Privacy";
-"complete_wallet_verification" = "Complete wallet verification";
-"clear_local_data" = "Clear local wallet data";
-"get_beam_faucet" = "Get Beams from Beam Community Faucet";
+"faucet_title" = "Empezar a usar la wallet";
+"faucet_text" = "Vea la wallet en acción. Obtenga una pequeña cantidad de Beams del grifo de la comunidad.";
+"faucet_ok" = "Sí, por favor";
+"faucet_no" = "No, estoy bien";
+"show_seed_phrase" = "Mostrar frase semilla";
+"increase_security" = "Aumentar la seguridad";
+"increase_security_text" = "Si alguna vez pierdes tu dispositivo, ¡necesitarás esta frase para recuperar tu wallet!\nNunca escriba su frase semilla en keychains o administradores de contraseñas.\nNunca lo guarde en sus carpetas locales o remotas de ninguna forma.";
+"all_set" = "Ya está todo listo";
+"wallet_is_secure" = "¡Su wallet está segura ahora! Tenga calma en su uso de características.";
+"make_wallet_secure_title" = "Haz tu wallet segura";
+"make_wallet_secure_text" = "Escribe y valida tu frase semilla para que siempre puedas recuperar tus fondos.";
+"complete_verification" = "Verificación completa";
+"yes_please" = "sí, por favor";
+"i_will_later" = "lo haré más tarde";
+"create_password" = "Crear contraseña";
+"get_coins" = "Consigue monedas";
+"secure_your_phrase" = "Asegura tu frase";
+"privacy" = "Privacidad";
+"complete_wallet_verification" = "Verificación completa de wallet";
+"clear_local_data" = "Limpiar datos de wallet local";
+"get_beam_faucet" = "Obtener Beams del grifo de la Comunidad de Beam";
 "save_wallet_logs" = "Guardar registros del wallet";
 "all_time" = "Por todo el tiempo";
 "last_5_days" = "Últimos 5 días";
 "last_15_days" = "Últimos 15 días";
 "last_30_days" = "Últimos 30 días";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
-"change_node_text_1" = "Use Face ID or enter your password to change node settings";
-"change_node_text_2" = "Use Touch ID or enter your password to change node settings";
-"change_node_text_3" = "Enter your password to change node settings";
-"change_settings_text_1" = "Use Face ID or enter your password to change settings";
-"change_settings_text_2" = "Use Touch ID or enter your password to change settings";
-"change_settings_text_3" = "Enter your password to change settings";
+"clear_wallet" = "Eliminar wallet actual";
+"clear_wallet_text" = "Todos los datos serán borrados. ¡Asegúrate de que has guardado tu frase semilla si quieres restaurar esta wallet más adelante! ¿Estás seguro de que quieres eliminar tu wallet?";
+"clear_wallet_password" = "Introduzca su contraseña para eliminar su wallet";
+"change_node_text_1" = "Utiliza el Face ID o introduce tu contraseña para cambiar la configuración del nodo";
+"change_node_text_2" = "Utilice Touch ID o introduzca su contraseña para cambiar la configuración del nodo";
+"change_node_text_3" = "Introduzca su contraseña para cambiar la configuración del nodo";
+"change_settings_text_1" = "Utiliza el Face ID o introduce tu contraseña para cambiar la configuración";
+"change_settings_text_2" = "Utilice Touch ID o introduzca su contraseña para cambiar la configuración";
+"change_settings_text_3" = "Introduce tu contraseña para cambiar la configuración";
 "paste" = "Pegar";
+"status" = "Estado"; // transaction status
+"remove_wallet" = "Eliminar wallet";
+"export_wallet_data" = "Exportar datos del wallet";
+"import_wallet_data" = "Importar datos del wallet";
+"utilities" = "Utilidades";
+"incorrect_file_title" = "Archivo incorrecto";
+"incorrect_file_text" = "El archivo que estás intentando importar a Beam Wallet no encaja. Por favor, elige otro archivo e inténtalo de nuevo.";
+"import_data_title" = "Importar datos";
+"import_data_text" = "¿Está seguro que desea importar datos a su wallet de Beam? Todos los datos actuales serán reemplazados por uno importado.";
+"import_data_text_2" = "Sólo los datos exportados desde la wallet con la misma frase semilla pueden ser importados.";
+"import" = "Importar";
+"export_data" = "Exportar datos";
+"till_block" = "altura hasta bloque";
+"since" = "since"; // example since 1024 block height
+"block_height" = "block height";
+"dark_mode" = "Dark mode";
+"delete_all_tags" = "Delete all tags";
