--- a/Resources/fi-FI.lproj/Localizable.strings
+++ b/Resources/fi-FI.lproj/Localizable.strings
@@ -16,7 +16,7 @@
 "seed_prhase" = "Seed phrase";
 "input_seed" = "Kirjoita seed phrase -palautusavaimesi";
 "confirm_seed_text" = "Varmistaaksesi, että seed phrase on kirjoitettu talteen oikein, täytä alla olevat kentät";
-"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed" = "Seed phrase -palautusavaimellasi pääsee käsiksi kaikkeen lompakon varallisuuteen. Tästä eteenpäin et voi nähdä seed phraseasi asetuksistasi. Tulosta tai kirjoita se huolellisesti ylös, sekä pidä se tallessa esimerkiksi kassakaapissa, pankkiholvissa tai muussa turvallisesti lukitussa tilassa. Ilman seed phrasea et voi palauttaa lompakkosi saldoa tarvittaessa.";
 "display_seed_old" = "Seed phrase -palautusavaimellasi pääsee käsiksi kaikkeen lompakon varallisuuteen. Tulosta tai kirjoita se huolellisesti ylös, sekä pidä se tallessa esimerkiksi kassakaapissa, pankkiholvissa tai muussa turvallisesti lukitussa tilassa. Ilman palautusavainta et voi palauttaa lompakkosi saldoa tarvittaessa.";
 "intro_seed_main" = "Luo uusi lompakko generoimalla seed phrase -palautusavain. Jos unohdat salasanasi tai kadotat laitteesi, tarvitset seed phrasen, jotta voit palauttaa lompakkosi saldon. Älä koskaan tallenna seed phrasea salasananhallintaohjelmiin, omalle laitteellesi tai muuhunkaan vastaavaan digitaaliseen muotoon, kuten pilvipalvelimille.";
 "intro_seed_1" = "Älä anna kenenkään nähdä seed phraseasi";
@@ -51,8 +51,8 @@
 "no_internet" = "Ei internetyhteyttä";
 "wallet_not_created" = "Lompakkoa ei luotu";
 "wallet_not_opened" = "Lompakkoa ei voida avata";
-"restor_wallet_warning" = "Ole hyvä ja odota kunnes synkronointi on valmis. Älä sulje sovellusta tai pienennä ikkunaa. Lompakon palautuksessa saatta kestää jonkin aikaa.";
-"restor_wallet_info" = "Ainoastaan lompakon saldo (UTXO) voidaan palauttaa. Tapahtumatiedot pysyvät aina salassa, \neivätkä ne tallennu lohkoketjuun.";
+"restor_wallet_warning" = "Lompakon palautuksessa saatta kestää jonkin aikaa. Ole hyvä ja odota kunnes synkronointi on valmis. Älä sulje sovellusta tai pienennä ikkunaa.";
+"restor_wallet_info" = "Ainoastaan lompakon saldo (UTXO:t) palautetaan. Tapahtumatietosi ovat aina yksityisiä, eivätkä ne tallennu lohkoketjuun.";
 "receive" = "Vastaanota";
 "send" = "Lähetä";
 "available" = "Käytettävissä";
@@ -63,8 +63,8 @@
 "sending_address" = "Lähettäjän osoite";
 "receiving_address" = "Saajan osoite";
 "transaction_fee" = "Siirtomaksu";
-"transaction_id" = "Tapahtuman id";
-"kernel_id" = "Kernel id";
+"transaction_id" = "Tapahtuman ID";
+"kernel_id" = "Kernel ID";
 "comment" = "Kommentti";
 "failure_reason" = "Virheen syy";
 "cancel_transaction" = "Peruuta siirto";
@@ -119,6 +119,8 @@
 "delete_address" = "Poista osoite";
 "delete_address_transaction" = "Poista osoite ja siihen liittyvät tapahtumat";
 "delete_address_only" = "Poista vain osoite";
+"delete_address_text" = "Haluatko varmasti poistaa tämän osoitteen lompakostasi?";
+"delete_contact_text" = "Haluatko varmasti poistaa tämän yhteystiedon lompakostasi?";
 "category" = "Luokka";
 "in_24_hours" = "24 tunnissa";
 "never" = "Ei koskaan";
@@ -285,8 +287,8 @@
 "buy_transaction_success_title" = "Ostotapahtuma valmis";
 "buy_transaction_success_text" = "BEAMit siirtyvät pian";
 "open_in_explorer" = "Avaa Blockchain Explorerissa";
-"receive_beam" = "BEAMin vastaanotto";
-"send_beam" = "BEAMin lähetys";
+"receive_beam" = "Vastaanota BEAM";
+"send_beam" = "Lähetä BEAM";
 "pending" = "Odottaa";
 "completed" = "Valmis";
 "received" = "Vastaanotettu";
@@ -309,10 +311,10 @@
 "coinbase" = "Coinbase";
 "regular" = "Normaali";
 "treasury" = "Rahasto";
-"id" = "Id";
+"id" = "ID";
 "date_time" = "Päivämäärä   |   aika";
 "utxo_history" = "UTXO-historia";
-"delete_all_text" = "Oletko varma, että haluat poistaa kaikki (str) lompakostasi?";
+"delete_all_text" = "Are you sure you want to delete all (str) from your device?";
 "delete_category_text" = "Oletko varma, että haluat poistaa luokan “(str)”?";
 "canot_connect_node" = "Palvelimeen (node) ei saada yhteyttä";
 "buy_beam_value" = "Lähetä (value) yllä olevaan (name)-osoitteeseen suorittaaksesi ostotapahtuman loppuun"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
@@ -359,7 +361,7 @@
 "default" = "Oletus";
 "my_active" = "Aktiiviset"; // addresses
 "my_expired" = "Vanhentuneet"; // addresses
-"general_settings" = "Yleiset asetukset";
+"general_settings" = "Yleiset";
 "unavailable" = "Ei käytettävissä";
 "in_progress_out" = "Käsitellään\n(lähtevä)";
 "in_progress_in" = "Käsitellään\n(saapuva)";
@@ -369,7 +371,6 @@
 "h" = "t"; // hour
 "m" = "min"; // minute
 "send_qr_secure" = "Näytä tämä QR-koodi siirron suorittajalle tai lähetä se turvallista viestintävälinettä käyttäen.";
-"share_transaction" = "Jaa tapahtuman tiedot";
 "auth_face_confirm" = "Vahvista kasvosi kirjautuaksesi";
 "auth_touch_confirm" = "Vahvista sormenjälkesi kirjautuaksesi";
 "auth_bio_failed" = "(Mechanism) on estetty usean virheellisen yrityksen vuoksi. Anna iPhonen pääsykoodi ottaaksesi (Mechanism) käyttöön."; // (Mechanism) is Face ID or Touch ID.
@@ -417,13 +418,13 @@
 "NSPhotoLibraryUsageDescription" = "Anna pääsy galleriaan valitaksesi QR-koodin";
 "NSFaceIDUsageDescription" = "Tämä sovellus tarvitsee luvan käyttää Face ID -kasvontunnistusta";
 "NSCameraUsageDescription" = "Tarvitaan kameraa QR-koodien skannaamiseen";
-"search_transactions" = "Etsi tapahtuman id:llä, kernel id:llä, kommentilla, osoitteella tai yhteystiedolla";
+"search_transactions" = "Etsi tapahtuman ID:llä, kernel ID:llä, kommentilla, osoitteella tai yhteystiedolla";
 "random_node" = "Yhdistä satunnaiseen ulkoiseen palvelimeen (random node)";
 "restore_create_title" = "Palauta vanha lompakko tai luo uusi";
 "restore_create_text" = "Jos haluat palauttaa vanhan lompakon, tapahtumahistoria ja tallennetut osoitteet katoavat pysyvästi.";
 "proceed" = "Jatka";
 "info_restore_title" = "Älä käytä samaan aikaan kahta lompakkoa, jotka on luotu samasta seed phrasesta";
-"info_restore_text" = "Saldo ja tapahtumahistoria eivät synkronoidu laitteiden välillä sekä tapahtumat saattavat epäonnistua.";
+"info_restore_text" = "Jos käytät kahta lompakkoa, joissa on sama seed phrase, saldot eivät synkronoidu lompakkojen välillä. Jos haluat, että saldot synkronoituvat, tulee sinun käyttää molemmissa lompakoissa omaa, luotettavaa palvelinta (node), johon on asetettu lompakon omistusavain. Huomioi kuitenkin, että tapahtumahistoria ei synkronoidu lompakkojen välillä missään tilanteessa.";
 "crash_title" = "Beam-lompakko kaatui odottamattomasti";
 "crash_message" = "Haluaisitko lähettää raportin virhetiedoista meille? Virhetietojen saaminen auttaisi meitä paikantamaan ja korjaamaan virheet nopeammin. Tämä on ainoastaan yksittäinen virheraportti eikä siis jatkuva virhetietojen keräämisen hyväksyminen.";
 "crash_negative" = "Ei kiitos";
@@ -446,38 +447,56 @@
 "use_face_id" = "Käytä Face ID:tä";
 "enter_your_password" = "Kirjoita salasanasi";
 "share_details" = "Jaa tiedot";
-"faucet_title" = "Start using the wallet";
-"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
-"faucet_ok" = "Yes, please";
-"faucet_no" = "No, I'm fine";
-"show_seed_phrase" = "Show seed phrase";
-"increase_security" = "Increase security";
-"increase_security_text" = "If you ever lose your device, you will need this phrase to recover your wallet!\nNever type your seed phrase in keychains or password managers.\nNever save it in your local or remote folders in any form.";
-"all_set" = "You are all set";
-"wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
-"make_wallet_secure_title" = "Make your wallet secure";
-"make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
-"complete_verification" = "Complete verification";
-"yes_please" = "yes, please";
-"i_will_later" = "I will do it later";
-"create_password" = "Create password";
-"get_coins" = "Get coins";
-"secure_your_phrase" = "Secure your phrase";
-"privacy" = "Privacy";
-"complete_wallet_verification" = "Complete wallet verification";
-"clear_local_data" = "Clear local wallet data";
-"get_beam_faucet" = "Get Beams from Beam Community Faucet";
+"faucet_title" = "Aloita lompakon käyttö";
+"faucet_text" = "Näe lompakko toiminnassa. Ota vastaan pieni summa Beamiä yhteisön testikäyttöön tarkoitetusta kassasta.";
+"faucet_ok" = "Kyllä kiitos";
+"faucet_no" = "Ei kiitos";
+"show_seed_phrase" = "Näytä seed phrase";
+"increase_security" = "Lisää turvallisuutta";
+"increase_security_text" = "Jos unohdat salasanasi tai kadotat laitteesi, tarvitset seed phrasen, jotta voit palauttaa lompakkosi saldon.\nÄlä koskaan tallenna seed phrasea salasananhallintaohjelmiin!\nÄlä tallenna sitä omalle laitteellesi tai muuhunkaan vastaavaan digitaaliseen muotoon, kuten pilvipalvelimille!";
+"all_set" = "Kaikki on valmista";
+"wallet_is_secure" = "Lompakkosi on nyt turvallinen!";
+"make_wallet_secure_title" = "Tee lompakostasi turvallinen";
+"make_wallet_secure_text" = "Kirjoita ylös ja tarkista seed phrasesi, jotta voit palauttaa saldosi tarvittaessa.";
+"complete_verification" = "Suorita varmennus";
+"yes_please" = "kyllä kiitos";
+"i_will_later" = "myöhemmin";
+"create_password" = "Luo salasana";
+"get_coins" = "Hanki kolikkoja";
+"secure_your_phrase" = "Suojaa seed phrasesi";
+"privacy" = "Yksityisyys";
+"complete_wallet_verification" = "Suorita lompakon varmennus";
+"clear_local_data" = "Tyhjennä paikallisesti tallennetut tiedot";
+"get_beam_faucet" = "Hanki Beamiä yhteisön testikäyttöön tarkoitetusta kassasta";
 "save_wallet_logs" = "Tallenna lompakon lokitiedot";
 "all_time" = "Kaikki";
 "last_5_days" = "Viimeiset 5 päivää";
 "last_15_days" = "Viimeiset 15 päivää";
 "last_30_days" = "Viimeiset 30 päivää";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
-"change_node_text_1" = "Use Face ID or enter your password to change node settings";
-"change_node_text_2" = "Use Touch ID or enter your password to change node settings";
-"change_node_text_3" = "Enter your password to change node settings";
-"change_settings_text_1" = "Use Face ID or enter your password to change settings";
-"change_settings_text_2" = "Use Touch ID or enter your password to change settings";
-"change_settings_text_3" = "Enter your password to change settings";
+"clear_wallet" = "Poista nykyinen lompakko";
+"clear_wallet_text" = "Kaikki lompakon tiedot poistetaan. Varmista, että olet ottanut talteen seed phrase -palautusavaimesi, jos haluat palauttaa tämän lompakon myöhemmin. Haluatko varmasti poistaa lompakkosi?";
+"clear_wallet_password" = "Kirjoita salasanasi poistaaksesi lompakon";
+"change_node_text_1" = "Käytä Face ID:tä tai kirjoita salasanasi muuttaaksesi palvelimen (node) asetuksia";
+"change_node_text_2" = "Käytä Touch ID:tä tai kirjoita salasanasi muuttaaksesi palvelimen (node) asetuksia";
+"change_node_text_3" = "Kirjoita salasanasi muuttaaksesi palvelimen (node) asetuksia";
+"change_settings_text_1" = "Käytä Face ID:tä tai kirjoita salasanasi muuttaaksesi asetuksia";
+"change_settings_text_2" = "Käytä Touch ID:tä tai kirjoita salasanasi muuttaaksesi asetuksia";
+"change_settings_text_3" = "Kirjoita salasanasi muuttaaksesi asetuksia";
 "paste" = "Liitä";
+"status" = "Tila"; // transaction status
+"remove_wallet" = "Poista lompakko";
+"export_wallet_data" = "Vie lompakon tiedot";
+"import_wallet_data" = "Tuo lompakon tiedot";
+"utilities" = "Ominaisuudet";
+"incorrect_file_title" = "Virheellinen tiedosto";
+"incorrect_file_text" = "Tiedosto, jonka yrität tuoda Beam lompakkoon, ei ole yhteensopiva. Valitse toinen tiedosto ja yritä uudelleen.";
+"import_data_title" = "Tuo tiedot";
+"import_data_text" = "Oletko varma, että haluat tuoda tiedot Beam-lompakkoosi? Nykyiset tiedot pyyhitään ja korvataan liittämilläsi tiedoilla.";
+"import_data_text_2" = "Vain sellaiset tiedot voidaan tuoda lompakkoon, jotka tuodaan lompakosta, jossa on käytössä sama seed phrase.";
+"import" = "Tuo";
+"export_data" = "Vie tiedot";
+"till_block" = "lohkon tasolla";
+"since" = "since"; // example since 1024 block height
+"block_height" = "block height";
+"dark_mode" = "Dark mode";
+"delete_all_tags" = "Delete all tags";
