--- a/Resources/sv.lproj/Localizable.strings
+++ b/Resources/sv.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "Återställ plånbok";
-"restore_wallet_info" = "Du försöker nu återställa en befintlig Beam-plånbok. Notera att om du använder din plånbok på en annan enhet kommer balansen vara uppdaterad men transaktionshistorik och adresser kommer hållas separat per enhet.";
+"restore_wallet_info" = "Du försöker nu återställa en befintlig Beam-plånbok. Notera att om du använder din plånbok på en annan enhet kommer beloppet vara uppdaterat men transaktionshistorik och adresser kommer hållas separat per enhet.";
 "no_space_title" = "Otillräckligt lagringsutrymme";
 "no_space_info" = "Åtminstone 200 MB ledigt utrymme behövs på enheten för att återställa plånboken";
 "beam_title" = "Skalbar konfidentiell kryptovaluta";
@@ -16,7 +16,7 @@
 "seed_prhase" = "Seed phrase";
 "input_seed" = "Ange ditt seed phrase";
 "confirm_seed_text" = "För att säkerställa att seed phrase är nerskrivet, vänligen fyll i de specifika orden nedan";
-"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed" = "Ditt seed phrase är din access-nyckel för alla dina medel i din plånbok. Från och med nu kommer du inte att se ditt seed phrase under inställningar. Skriv ner din seed phrase och spar detta i ett kassakåp eller ett låst valv. Utan seed phrase kommer du inte att kuna återställa dina pengar.";
 "display_seed_old" = "Ditt seed phrase tillåter åtkomsten till alla kryptovalutor i din plånbok. Skriv ner seed phrase och spar detta i ett kassaskåp eller i ett låst valv. Om ditt seed phrase försvinner kommer du inte kunna återställa dina pengar.";
 "intro_seed_main" = "Skapa en ny plånbok genom att generera ett seed phrase. Om du blir av med din enhet så behövs ditt seed phrase för att återställa tillgångarna. Ange aldrig ditt seed phrase på en nyckelknippa eller lösenordsmanagerare. Spara aldrig detta på ditt lokala filsystem eller några fjärr-mappar av någon sort.";
 "intro_seed_1" = "Låt ingen annan se din seed phrase";
@@ -51,8 +51,8 @@
 "no_internet" = "Internetåtkomst saknas";
 "wallet_not_created" = "Plånbok ej skapad";
 "wallet_not_opened" = "Plånbok kan ej öppnas";
-"restor_wallet_warning" = "Vänligen vänta på att synkroniseringen ska bli klar, stäng eller minimera inte applikationen. Återställningen av plånboken kan ta en stund.";
-"restor_wallet_info" = "Endast plånbokens balans (UTXO) kan återställas, transaktionsinformation är alltid privata och lagras aldrig i block-kedjan.";
+"restor_wallet_warning" = "Det kan ta en stund att återställa din plånbok. Vänta tills synkroniseringen är klar - stäng inte och minimera inte applikationen.";
+"restor_wallet_info" = "Endast plånbokens saldo(UTXO) kommer återställas. Din transaktionsinformation är alltid privata och lagras aldrig i block-kedjan.";
 "receive" = "Ta emot";
 "send" = "Skicka";
 "available" = "Tillgängligt";
@@ -119,6 +119,8 @@
 "delete_address" = "Ta bort adress";
 "delete_address_transaction" = "Ta bort adress och relaterade transaktioner";
 "delete_address_only" = "Ta bort endast adress";
+"delete_address_text" = "Är du säker på att du vill ta bort denna adress från din plånbok?";
+"delete_contact_text" = "Är du säker på att du vill ta bort denna kontakt från din plånbok?";
 "category" = "Tag";
 "in_24_hours" = "Inom 24 timmar";
 "never" = "Aldrig";
@@ -312,7 +314,7 @@
 "id" = "ID";
 "date_time" = "Datum | tid";
 "utxo_history" = "UTXO-historik";
-"delete_all_text" = "Är du säker på att du vill ta bort all (str) från din plånbok?";
+"delete_all_text" = "Are you sure you want to delete all (str) from your device?";
 "delete_category_text" = "Är du säker på att du vill ta bort \"(str)\" tag?";
 "canot_connect_node" = "Kunde inte ansluta till nod";
 "buy_beam_value" = "Skicka (value) till ovan (name) adress för att slutföra transaktionen"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
@@ -359,7 +361,7 @@
 "default" = "Standard";
 "my_active" = "Min aktiva"; // addresses
 "my_expired" = "Mina utgångna"; // addresses
-"general_settings" = "Generella inställningar";
+"general_settings" = "Generell";
 "unavailable" = "Otillgängligt";
 "in_progress_out" = "Pågår(utgående)";
 "in_progress_in" = "Pågår(inkommande)";
@@ -369,7 +371,6 @@
 "h" = "t"; // hour
 "m" = "m"; // minute
 "send_qr_secure" = "Visa denna QR-kod till sändaren eller skicka den över en extern säker kanal.";
-"share_transaction" = "Dela transaktions-detaljer";
 "auth_face_confirm" = "Verifiera ditt ansikte för att autentisera";
 "auth_touch_confirm" = "Verifiera ditt fingeravtryck för att autentisera";
 "auth_bio_failed" = "(Mekanism) har blivit utlåst på grund av ett antal felaktiga försök. Mata in iPhone-lösenordet för att aktivera (Mekanism)."; // (Mechanism) is Face ID or Touch ID.
@@ -385,9 +386,9 @@
 "transactions_empty" = "Din transaktions-lista är tom";
 "transactions_empty_progress" = "Du har inga aktiva transaktioner";
 "automatic_restore_title" = "Rekommenderad återställning";
-"automatic_restore_text" = "Beam Wallet will download a snapshot of the blockchain and restore your funds on the device";
+"automatic_restore_text" = "Beam-plånboken kommer att ladda ner en ögonblicksbild av block-kedjan och återställer ditt saldo på enheten";
 "manual_restore_title" = "Återställ med trovärdig nod";
-"manual_restore_text" = "Beam Wallet will connect to specific trusted node (configured with your owner key) and the node will restore your funds";
+"manual_restore_text" = "Beam-Plånboken kommer att ansluta till en specifik nod (konfigurerad med ägar-nyckeln) och noden kommer att återställa ditt saldo";
 "paste_owner_key" = "Klistra in denna kod i Beam-plånboken på din dator för att fortsätta återställningen från noden.";
 "after_paste_owner_key" = "När du har klistrat in koden, kör din nod på datorn och klicka \"nästa\" på din mobila app.";
 "enter_trusted_node" = "Mata in pålitlig nod-adress";
@@ -423,7 +424,7 @@
 "restore_create_text" = "Om du återställer en plånbok så kommer all transaktionshistorik och adresser att förloras.";
 "proceed" = "Fortsätt";
 "info_restore_title" = "Kör inte två plånböcker sammtidigt som har blivit initierade från samma seed phrase";
-"info_restore_text" = "Balans- och transaktionshistoriken kommer inte att synkroniseras mellan enheter och transaktioner kan misslyckas.";
+"info_restore_text" = "Om du kör två plånböcker med samma seed, synkroniseras inte saldona. För att hålla saldona synkroniserade använder du din egen betrodda nod konfigurerad med din ägarnyckel. Observera också att transaktionshistoriken inte synkroniseras mellan plånböcker i alla fall.";
 "crash_title" = "Beam-plånboken krashade oväntat";
 "crash_message" = "Skulle du godkänna att rapportera din begränsade mängd information till oss? Insamlandet av krash-informationen skulle möjliggöra att vi upptäcker fixar och buggar mycket snabbare. Detta är endast en krash-relaterad rapport, vi kommer inte att samla in några av dina data senare.";
 "crash_negative" = "Nej tack";
@@ -440,44 +441,62 @@
 "lock_screen" = "Lås skärm";
 "colour" = "Färg";
 "show_owner_key_auth_1" = "Om du installerar ägarnyckeln på en betrodd nod, tillåter noden att övervaka all UTXO som skickas till denna plånbok och plånböcker som genereras från samma seed phrase. Du måste ange ditt lösenord för att se Ägarnyckeln.";
-"show_owner_key_auth_2" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must pass 2-step verification (submit a password and use Touch ID) to see your Owner Key.";
-"show_owner_key_auth_3" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must pass 2-step verification (submit a password and use Face ID) to see your Owner Key.";
-"use_touch_id" = "Use your Touch ID";
-"use_face_id" = "Use your Face ID";
-"enter_your_password" = "Enter your password";
-"share_details" = "Share details";
-"faucet_title" = "Start using the wallet";
-"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
-"faucet_ok" = "Yes, please";
-"faucet_no" = "No, I'm fine";
-"show_seed_phrase" = "Show seed phrase";
-"increase_security" = "Increase security";
-"increase_security_text" = "If you ever lose your device, you will need this phrase to recover your wallet!\nNever type your seed phrase in keychains or password managers.\nNever save it in your local or remote folders in any form.";
-"all_set" = "You are all set";
-"wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
-"make_wallet_secure_title" = "Make your wallet secure";
-"make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
-"complete_verification" = "Complete verification";
-"yes_please" = "yes, please";
-"i_will_later" = "I will do it later";
-"create_password" = "Create password";
-"get_coins" = "Get coins";
-"secure_your_phrase" = "Secure your phrase";
-"privacy" = "Privacy";
-"complete_wallet_verification" = "Complete wallet verification";
-"clear_local_data" = "Clear local wallet data";
-"get_beam_faucet" = "Get Beams from Beam Community Faucet";
+"show_owner_key_auth_2" = "Om du installerar ägarnyckeln på en betrodd nod, tillåter du noden att övervaka all UTXO som skickas till denna plånbok och plånböcker som genereras från samma seed phrase. Du måste klara 2-stegsverifieringen (ange lösenord samt använda Touch ID) för att se Ägarnyckeln.";
+"show_owner_key_auth_3" = "Om du installerar ägarnyckeln på en betrodd nod, tillåter du noden att övervaka all UTXO som skickas till denna plånbok och plånböcker som genereras från samma seed phrase. Du måste klara 2-stegsverifieringen (ange lösenord samt använda Face ID) för att se Ägarnyckeln.";
+"use_touch_id" = "Använd ditt Touch ID";
+"use_face_id" = "Använd ditt Face ID";
+"enter_your_password" = "Ange ditt lösenord";
+"share_details" = "Dela Detaljer";
+"faucet_title" = "Börja använda din plånbok";
+"faucet_text" = "Vill du se plånboken \"in action\"? Tillgodose en liten mängd Beam från community-fauceten.";
+"faucet_ok" = "Ja, tack";
+"faucet_no" = "Nej tack, det är bra ändå";
+"show_seed_phrase" = "Visa seed phrase";
+"increase_security" = "Öka säkerheten";
+"increase_security_text" = "Om du skulle förlora din enhet, kommer du att behöva din seed phrase för att återställa din plånbok!\nSkriv aldrig ner din seed phrase på nyckelringar eller i lösenordsmanagerings-verktyg.\nSpara aldrig detta på någon lokal eller remote mapp i någon form.";
+"all_set" = "Du är klar";
+"wallet_is_secure" = "Din plånbok är säker nu! Var lugn när det gäller funktionen.";
+"make_wallet_secure_title" = "Gör din plånbok säker";
+"make_wallet_secure_text" = "Skriv ner och validera din seed phrase så att du alltid kan återställa dina medel.";
+"complete_verification" = "Komplettera verifieringen";
+"yes_please" = "ja, tack";
+"i_will_later" = "jag gör det senare";
+"create_password" = "Skapa lösenord";
+"get_coins" = "Skaffa mynt";
+"secure_your_phrase" = "Säkra din phrase";
+"privacy" = "Integritet";
+"complete_wallet_verification" = "Komplettera plånboksverifieringen";
+"clear_local_data" = "Rensa lokal plånboksdata";
+"get_beam_faucet" = "Skaffa Beam från Community-fauceten";
 "save_wallet_logs" = "Spara plånboksloggar";
-"all_time" = "For all time";
-"last_5_days" = "Last 5 days";
-"last_15_days" = "Last 15 days";
-"last_30_days" = "Last 30 days";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
-"change_node_text_1" = "Use Face ID or enter your password to change node settings";
-"change_node_text_2" = "Use Touch ID or enter your password to change node settings";
-"change_node_text_3" = "Enter your password to change node settings";
-"change_settings_text_1" = "Use Face ID or enter your password to change settings";
-"change_settings_text_2" = "Use Touch ID or enter your password to change settings";
-"change_settings_text_3" = "Enter your password to change settings";
+"all_time" = "För all tid";
+"last_5_days" = "Senaste 5 dagarna";
+"last_15_days" = "Senaste 15 dagarna";
+"last_30_days" = "Senaste 30 dagarna";
+"clear_wallet" = "Ta bort aktuell plånbok";
+"clear_wallet_text" = "All data kommer att raderas. Säkerställ att du har sparat ditt seed phrase om du vill återställa din plånbok vid ett senare tillfälle. Är du säker på att du vill ta bort plånboken?";
+"clear_wallet_password" = "Ange ditt lösenord för att ta bort plånboken";
+"change_node_text_1" = "Använd Ansikts-ID eller mata in ditt lösenord för att ändra nod-inställningar";
+"change_node_text_2" = "Använd Touch-ID eller mata in ditt lösenord för att ändra nod-inställningar";
+"change_node_text_3" = "Ange ditt lösenord för att ändra nod-inställningar";
+"change_settings_text_1" = "Använd Ansikts-ID eller mata in ditt lösenord för att ändra inställningar";
+"change_settings_text_2" = "Använd Touch-ID eller mata in ditt lösenord för att ändra inställningar";
+"change_settings_text_3" = "Ange ditt lösenord för att ändra inställningar";
 "paste" = "Klistra in";
+"status" = "Status"; // transaction status
+"remove_wallet" = "Ta bort plånbok";
+"export_wallet_data" = "Exportera plånbokens data";
+"import_wallet_data" = "Importera plånboksdata";
+"utilities" = "Verktyg";
+"incorrect_file_title" = "Fel filtyp";
+"incorrect_file_text" = "Filen du försöker importera till Beam-plånboken passar inte. Vänligen välj en annan fil och försök igen.";
+"import_data_title" = "Importera data";
+"import_data_text" = "Är du säker på att du vill importera data till Beam-plånboken? All nuvarande data kommer att ersättas med det som importeras.";
+"import_data_text_2" = "Endast datat från den exporterade plånboken med samma seed phrase kan bli importerat.";
+"import" = "Importera";
+"export_data" = "Exportera data";
+"till_block" = "till block-höjd";
+"since" = "since"; // example since 1024 block height
+"block_height" = "block height";
+"dark_mode" = "Dark mode";
+"delete_all_tags" = "Delete all tags";
