--- a/Resources/tr.lproj/Localizable.strings
+++ b/Resources/tr.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "Cüzdanı geri yükle";
-"restore_wallet_info" = "Mevcut bir Beam cüzdanını geri yüklemeye çalışıyorsunuz. Lütfen cüzdanınızı başka bir cihazda kullanırsanız, bakiyenizin güncel olacağını, ancak işlem geçmişinin ve adreslerin iki cihazda ayrı ayrı tutulacağını unutmayın.";
+"restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but transaction history and addresses will be kept separately on each device.";
 "no_space_title" = "Yeteri kadar yer yok";
 "no_space_info" = "Cüzdanı geri yüklemek için cihazda en az 200 Mb boş alan olması gerekir";
 "beam_title" = "Ölçeklenebilir gizlilik odaklı kriptopara";
@@ -51,8 +51,8 @@
 "no_internet" = "İnternet bağlantısı yok";
 "wallet_not_created" = "Cüzdan oluşturulmadı";
 "wallet_not_opened" = "Cüzdan açılamıyor";
-"restor_wallet_warning" = "Lütfen senkronizasyonu bekleyin ve uygulamayı kapatmayın veya simge durumuna küçültmeyin. Cüzdanın geri yüklenmesi biraz zaman alabilir.";
-"restor_wallet_info" = "Yalnızca cüzdan bakiyesi (UTXO) geri yüklenebilir, işlem bilgileri her zaman gizlidir ve hiçbir zaman blokzincirinde tutulmaz.";
+"restor_wallet_warning" = "Restoring your wallet may take a while. Please wait for synchronization to finish - do no close nor minimize the application.";
+"restor_wallet_info" = "Only the wallet balance (UTXOs) will be restored. Your transaction info is always private and never kept on the blockchain.";
 "receive" = "Al";
 "send" = "Gönder";
 "available" = "Mevcut";
@@ -119,6 +119,8 @@
 "delete_address" = "Adresi sil";
 "delete_address_transaction" = "Adres ve ilgili işlemleri sil";
 "delete_address_only" = "Adresi sil";
+"delete_address_text" = "Are you sure you want to delete this address from your wallet?";
+"delete_contact_text" = "Are you sure you want to delete this contact from your wallet?";
 "category" = "Etiket";
 "in_24_hours" = "24 saat içinde";
 "never" = "Asla";
@@ -312,7 +314,7 @@
 "id" = "Kimlik";
 "date_time" = "Tarih | zaman";
 "utxo_history" = "UTXO geçmişi";
-"delete_all_text" = "Tüm (str) cüzdandan silmek istediğinize emin misiniz?";
+"delete_all_text" = "Are you sure you want to delete all (str) from your device?";
 "delete_category_text" = "“(str)” etiketini silmek istediğinize emin misiniz?";
 "canot_connect_node" = "Nod{[=-apos;-=]}a bağlanamıyor";
 "buy_beam_value" = "İşlemi tamamlamak için yukarıdaki (value) adrese gönderin (name)"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
@@ -359,7 +361,7 @@
 "default" = "Varsayılan";
 "my_active" = "Aktif olanlarım"; // addresses
 "my_expired" = "Süresi geçenler"; // addresses
-"general_settings" = "Genel ayarlar";
+"general_settings" = "General";
 "unavailable" = "Uygun değil";
 "in_progress_out" = "Devam ediyor \n(giden)";
 "in_progress_in" = "Devam ediyor \n(gelen)";
@@ -369,7 +371,6 @@
 "h" = "s"; // hour
 "m" = "d"; // minute
 "send_qr_secure" = "Bu QR kodunu gönderene gösterin veya harici güvenli bir kanal üzerinden gönderin.";
-"share_transaction" = "İşlem detaylarını paylaşın";
 "auth_face_confirm" = "Kimlik doğrulamak için yüzünüzü onaylayın";
 "auth_touch_confirm" = "Kimlik doğrulamak için parmak izinizi onaylayın";
 "auth_bio_failed" = "(Mekanizma) birkaç başarısız girişim nedeniyle kilitlendi. Etkinleştirmek için iPhone şifresini girin (Mekanizma)."; // (Mechanism) is Face ID or Touch ID.
@@ -423,7 +424,7 @@
 "restore_create_text" = "Bir cüzdanı geri yükleyecekseniz, tüm işlem geçmişi ve adresleri kaybolur.";
 "proceed" = "Devam et";
 "info_restore_title" = "Aynı anahtar kelimeler ile kurulan iki cüzdanı aynı anda çalıştırmayın";
-"info_restore_text" = "Bakiye ve işlem geçmişi cihazlar arasında senkronize edilmez ve işlemler başarısız olabilir.";
+"info_restore_text" = "If you run two wallets with the same seed, their balances will not be synchronized. To keep the balances in sync, use your own trusted node configured with your owner key. Also note that transaction history is not sycnrhonized between wallets in any case.";
 "crash_title" = "Beam Wallet crashed unexpectedly";
 "crash_message" = "Would you agree to report your limited amount of information to us? Collecting crash information would allow us to discover and fix bugs much faster. This is only a single crash-related report, we won't keep collecting any of your data later.";
 "crash_negative" = "No, thanks";
@@ -447,7 +448,7 @@
 "enter_your_password" = "Enter your password";
 "share_details" = "Share details";
 "faucet_title" = "Start using the wallet";
-"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
+"faucet_text" = "See the wallet in action. Get a very small amount of Beams from the community faucet.";
 "faucet_ok" = "Yes, please";
 "faucet_no" = "No, I'm fine";
 "show_seed_phrase" = "Show seed phrase";
@@ -456,7 +457,7 @@
 "all_set" = "You are all set";
 "wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
 "make_wallet_secure_title" = "Make your wallet secure";
-"make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
+"make_wallet_secure_text" = "Write down and validate your seed phrase so you can always recover your funds.";
 "complete_verification" = "Complete verification";
 "yes_please" = "yes, please";
 "i_will_later" = "I will do it later";
@@ -472,8 +473,9 @@
 "last_5_days" = "Last 5 days";
 "last_15_days" = "Last 15 days";
 "last_30_days" = "Last 30 days";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
+"clear_wallet" = "Remove current wallet";
+"clear_wallet_text" = "All data will be erased. Make sure you’ve saved your seed phrase if you want to restore this wallet later on! Are you sure you want to remove your wallet?";
+"clear_wallet_password" = "Enter your password to remove your wallet";
 "change_node_text_1" = "Use Face ID or enter your password to change node settings";
 "change_node_text_2" = "Use Touch ID or enter your password to change node settings";
 "change_node_text_3" = "Enter your password to change node settings";
@@ -481,3 +483,20 @@
 "change_settings_text_2" = "Use Touch ID or enter your password to change settings";
 "change_settings_text_3" = "Enter your password to change settings";
 "paste" = "Yapıştır";
+"status" = "Durum"; // transaction status
+"remove_wallet" = "Remove wallet";
+"export_wallet_data" = "Export wallet data";
+"import_wallet_data" = "Import wallet data";
+"utilities" = "Utilities";
+"incorrect_file_title" = "Incorrect file";
+"incorrect_file_text" = "The file you’re trying to import to Beam wallet doesn’t fit. Please choose another file and try again.";
+"import_data_title" = "Import data";
+"import_data_text" = "Are you sure you want to import data to your Beam wallet? All the current data will be replaced with imported one.";
+"import_data_text_2" = "Only the data exported from the wallet with the same seed phrase can be imported.";
+"import" = "Import";
+"export_data" = "Export data";
+"till_block" = "till block height";
+"since" = "since"; // example since 1024 block height
+"block_height" = "block height";
+"dark_mode" = "Dark mode";
+"delete_all_tags" = "Delete all tags";
